--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
           </li>
           <li><a href="pages/events/events.html">Events</a></li>
           <li><a href="pages/events/the-event-object.html">The Event Object</a></li>
-          <li><a href="pages/events/event-propagation.html">Event Propagation</a></li>
+          <li><a href="pages/events/event-propagation.html">Event Propagation</a> - bubbling and capturing</li>
           <li><a href="pages/events/stopping-an-event.html">Stopping an Event</a></li>
           <li><a href="pages/events/click-events.html">Click events</a></li>
         </ul>
@@ -501,6 +501,13 @@
     </ul>
 
 
+    <h4>General</h4>
+    <ul>
+
+      <li><a href="examples/smooth-scrolling/smooth-scrolling.html">Smooth scrolling</a></li>
+           
+    </ul>
+
     <h3>Events</h3>
 
     <h4>Targeting</h4>
@@ -528,7 +535,7 @@
       <li><a href="examples/events/print-searchbox-text-to-console.html">Print searchbox text to console</a></li>
       <li><a href="examples/events/checkbox.html">Checkbox marks in JS as TRUE or FALSE</a></li>
       <li><a href="examples/events/dropdown.html">Check dropdown option</a></li>
-
+      
     </ul>
 
 
@@ -600,19 +607,11 @@
 
 
 
-
-
-
-
     <p class="toc-heading1">Projects (course 2)</p>
     <h3>Expense Tracker</h3>
     <ul>
       <li><a href="projects/course2/modal/modal.html">Modals</a></li>
     </ul>
-
-
-
-
 
 
 
