--- a/pages/events/click-events.html
+++ b/pages/events/click-events.html
@@ -32,6 +32,8 @@
                     <p>The function that is called is the event handler.</p>
                 </div>
             </div>
+
+            <h2>click event</h2>
             <div class="row">
                 <div class="col-5">
                     <p>Get elements with specific ID.</p>
@@ -49,16 +51,70 @@
 
 
 
+
+
+            <h2>mouse enter</h2>
+            <div class="row">              
+                <div class="col-5">
+                    <p>mouse enter fires when the mouse enters an element</p>
+                    <p>Hover over an H1 tag to view</p>
+                </div>
+
+                <div class="col-7">
+                    <pre class="example"><span class="code-js">const h1 = document.querySelector('h1');
+
+h1.addEventListener('mouseenter', function(e){
+  console.log('addEventListern: Great! You are reading the heading')
+});</span></pre>
+                </div>
+            </div>
+
+
+
+
+
+            <h2>Attach eventListener to an element using 'on' (old way)</h2>
+            <div class="row">              
+                <div class="col-5">
+                    <p>Use 'onmouseenter' and set it to the function.</p>
+                </div>
+
+                <div class="col-7">
+<pre class="example"><span class="code-js">h1.onmouseenter = function(e){
+  console.log('addEventListern: Great! You are reading the heading')
+}</span></pre>
+                </div>
+            </div>
+
+
+
+
+
+
+
+<div class="h1">H1 test</div>
         </section>
+        <script>
 
 
+const h1 = document.querySelector('h1');
+
+h1.addEventListener('mouseenter', function(e){
+console.log('addEventListern: Great! You are reading the heading')
+});
 
 
+h1.onmouseenter = function(e){
+console.log('addEventListern: Great! You are reading the heading')
+}
 
 
+const alertH1 = function(e) {
+  console.log('addEventListern: Great! You are reading the heading')
 
-        <script src="../../_js/jquery.js"></script>
-        <script src="../../_js/bootstrap.bundle.js"></script>
+  // enter event and name of function to remove
+  h1.removeEventListener('mouseenter', alertH1);
+};
+</script>
 </body>
-
 </html>
