--- a/index.html
+++ b/index.html
@@ -42,14 +42,7 @@
     </nav>
 
 
-
-
-
-
-
-
     <p class="toc-heading1">Overview of JavaScript</p>
-
     <nav>
       <ul class="main-nav">
 
@@ -59,17 +52,11 @@
           <li><a href="pages/overview/code-execution.html">Code Execution</a></li>
           <li><a href="pages/overview/scope-chain.html">Scope Chain</a></li>
           <li><a href="pages/overview/primatives.html">Primatives</a> - Objects and Functions</li>
+          <li><a href="pages/overview/lifecycle.html">Lifecycle</a></li>
+          <li><a href="pages/overview/async-and-defer.html">Async and Defer</a></li>
         </ul>
       </ul>
     </nav>
-
-
-
-
-
-
-
-
 
 
 
@@ -450,7 +437,8 @@
 
 
 
-    <p class="toc-heading1">Advanced</p>
+    <p
+     class="toc-heading1">Advanced</p>
     <p class="toc-heading2">Debugging</p>
 
     <ul class="main-nav">
@@ -480,6 +468,16 @@
 
 
 
+    <p class="toc-heading1">Object Oriented Programming</p>
+    <p class="toc-heading2">...</p>
+
+    <ul class="main-nav">
+      <ul class="sub-nav">
+        <li><a href="pages/oop/....html">....</a></li>
+      </ul>
+    </ul>
+
+   
 
 
 
@@ -505,10 +503,13 @@
     </ul>
 
 
-    <h4>General</h4>
+    <h4>Scrolling</h4>
     <ul>
 
       <li><a href="examples/smooth-scrolling/smooth-scrolling.html">Smooth scrolling</a></li>
+      <li><a href="examples/sticky-nav/sticky-nav.html">Sticky Nav</a></li>
+      <li><a href="examples/revealing-elements-on-scroll/revealing-elements-on-scroll.html">Revealing elements on scroll</a></li>
+      <li><a href="examples/lazy-load-images-on-scroll/lazy-load-images-on-scroll.html">Lazy load images on scroll</a></li>
            
     </ul>
 
@@ -539,7 +540,7 @@
       <li><a href="examples/events/print-searchbox-text-to-console.html">Print searchbox text to console</a></li>
       <li><a href="examples/events/checkbox.html">Checkbox marks in JS as TRUE or FALSE</a></li>
       <li><a href="examples/events/dropdown.html">Check dropdown option</a></li>
-      
+      <li><a href="examples/slider-component/slider-component.html">Slider component</a></li>
     </ul>
 
 
