added OOP creation steps

--- a/index.html
+++ b/index.html
@@ -468,16 +468,34 @@
 
 
 
-    <p class="toc-heading1">Object Oriented Programming</p>
-    <p class="toc-heading2">...</p>
+    <p class="toc-heading1">Object Oriented Programming (OOP)</p>
+    <p class="toc-heading2">Overview</p>
 
     <ul class="main-nav">
       <ul class="sub-nav">
-        <li><a href="pages/oop/....html">....</a></li>
+        <li><a href="pages/oop/oop-overview.html">Object Oriented Programming Overview</a></li>
+        <li><a href="pages/oop/oop-in-javascript.html">Object Oriented Programming in JavaScript</a></li>
+        <li><a href="pages/oop/oop-constructor-functions.html">Constructor functions</a></li>        
+        <li><a href="pages/oop/oop-prototypal-inheritance.html">Prototypal Inheritance</a></li>        
+        <li><a href="pages/oop/oop-es6-classes.html">ES6 Classes</a></li>
+        <li><a href="pages/oop/oop-setters-and-getters.html">Setters and Getters</a></li>
+        <li><a href="pages/oop/oop-static-methods.html">Static methods</a></li>
+        <li><a href="pages/oop/oop-object-create.html">Object.create()</a></li>
       </ul>
     </ul>
 
    
+
+
+
+
+
+
+
+
+
+
+
 
 
 
