OOP Object creation examples

--- a/index.html
+++ b/index.html
@@ -481,6 +481,8 @@
         <li><a href="pages/oop/oop-setters-and-getters.html">Setters and Getters</a></li>
         <li><a href="pages/oop/oop-static-methods.html">Static methods</a></li>
         <li><a href="pages/oop/oop-object-create.html">Object.create()</a></li>
+        <li><a href="pages/oop/oop-class-inheritance.html">Class Inheritance</a></li>
+        <li><a href="pages/oop/oop-encapsulation.html">Encapsulation</a></li>
       </ul>
     </ul>
 
