--- a/index.html
+++ b/index.html
@@ -483,6 +483,7 @@
         <li><a href="pages/oop/oop-object-create.html">Object.create()</a></li>
         <li><a href="pages/oop/oop-class-inheritance.html">Class Inheritance</a></li>
         <li><a href="pages/oop/oop-encapsulation.html">Encapsulation</a></li>
+        <li><a href="pages/oop/oop-chaining-methods-in-a-class.html">Chaining Methods in a class</a></li>
       </ul>
     </ul>
 
@@ -644,6 +645,15 @@
     <h3>Marketing Page</h3>
     <ul>
       <li><a href="projects/marketing-site/index.html">Marketing Site (final)</a></li>
+    </ul>
+
+    
+    <p class="toc-heading1">Projects (Mapty App)</p>
+    <h3>Map app</h3>
+    <ul>
+      <li><a href="projects/map-app/index.html" target="_blank">Map App (final)</a></li>
+      <li><a href="projects/map-app/map-app-01.html">Map App</a></li>
+      <li><a href="projects/map-app/using-the-geolocation-api.html">Using the Geolocation API</a> - using Leaflet</li>
     </ul>
 
 
