--- a/pages/oop/oop-es6-classes.html
+++ b/pages/oop/oop-es6-classes.html
@@ -182,6 +182,9 @@ console.log(jessica.__proto__ === PersonCl.prototype);</span></pre>
 
 
 
+<h1>Terminology overview</h1>
+
+<img src="../../_img/oop-es6-classes.png" width="950px">
 
 
 
