--- a/index.html
+++ b/index.html
@@ -487,6 +487,23 @@
       </ul>
     </ul>
 
+
+
+
+
+
+    
+    <p class="toc-heading1">Asynchronous JavaScript</p>
+
+    <ul class="main-nav">
+      <ul class="sub-nav">
+        <li><a href="pages/asynchronous/ajax-and-apis.html">AJAX and APIs overview</a></li>
+        <li><a href="pages/asynchronous/ajax.html">AJAX</a></li>
+        <li><a href="pages/asynchronous/promises-and-fetch.html">Promises and Fetch</a></li>
+     
+      </ul>
+    </ul>
+
    
 
 
