--- a/projects/map-app/map-app-01.html
+++ b/projects/map-app/map-app-01.html
@@ -82,8 +82,9 @@
     <div class="row">
       <div class="col">
         <p>This is also a work in progress.</p>
-        <p>Start coding.</p>
-        <img src="../../_img/planning-a-project-04-architecture.png" width="950px">
+        <p>do some experiments,          
+          play around with the code, and only then,          
+          think about the architecture for the final project</p>
       </div>
     </div>
 
